# NewsFinder

./: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 06357e4ad6e7_create_news_table.py  0d6c3e8d663c_add_summary_column_to_news_table.py
config/: __init__.py
database/models/: news.py
src/: main.py
src/config/: logger.py
src/crawler/: crawler.py
src/crawler/commands/: command.py  crawl_command.py
src/database/: setup.py
src/database/models/: news.py
src/steps/: __init__.py  base_step.py  get_content_step.py  get_links_step.py  go_to_url_step.py
src/strategies/: cnn_strategy.py  crawling_strategy.py  g1_strategy.py  portal6_strategy.py  strategy_manager.py  terra_strategy.py
