[project]
name = "newsfinder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "celery>=5.5.3",
    "pydantic-settings>=2.11.0",
    "pyppeteer>=2.0.0",
    "sqlalchemy>=2.0.43",
    "psycopg2-binary>=2.9.9"
]
